# cafe-sys

./: Cargo.toml  README.md  build.rs
src/: avm.rs  camera.rs  dc.rs  dmae.rs  drmapp.rs  erreula.rs  h264.rs  lib.rs  lzma920.rs  mic.rs  nfc.rs  nio_prof.rs  nlibnss.rs  nlibnss2.rs  nn_acp.rs  nn_act.rs  nn_aoc.rs  nn_boss.rs  nn_ccr.rs  nn_cmpt.rs  nn_dlp.rs  nn_ec.rs  nn_fp.rs  nn_hai.rs  nn_hpad.rs  nn_idbe.rs  nn_ndm.rs  nn_nets2.rs  nn_nfp.rs  nn_nim.rs  nn_olv.rs  nn_pdm.rs  nn_save.rs  nn_sl.rs  nn_spm.rs  nn_temp.rs  nn_uds.rs  nn_vctl.rs  nsysccr.rs  nsyshid.rs  (+18 more)
src/coreinit/: alarm.rs  context.rs  debug.rs  dynload.rs  exception.rs  fast_mutex.rs  foreground.rs  interrupts.rs  mem.rs  mod.rs  mutex.rs  scheduler.rs  spinlock.rs  system.rs  thread.rs  time.rs
src/gx2/: display.rs  mem.rs  mod.rs  shader.rs  state.rs  surface.rs
src/nn/: ac.rs  acp.rs  act.rs  aoc.rs  dlp.rs  ec.rs  fp.rs  hpad.rs  idbe.rs  mod.rs  nets2.rs  nfp.rs  nim.rs  olv.rs  pdm.rs  save.rs  sl.rs  spm.rs  temp.rs  vctl.rs
src/nn_ac/: ac.rs  mod.rs
src/nsys/: ccr.rs  kbd.rs  mod.rs  uhs.rs  uvd.rs
src/nsys/net/: mod.rs  socket.rs
src/nsysnet/: mod.rs  socket.rs
src/padscore/: kpad.rs  mod.rs  wpad.rs
src/proc_ui/: mod.rs
src/sysapp/: mod.rs
src/vpad/: mod.rs
