[package]
name = "cafe-sys"
version = "0.1.0"
authors = ["29th-Day"]
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["wiiu", "homebrew"]
build = "build.rs"

[lib]
test = false
bench = false

[features]
avm = []
camera = []
coreinit = []
dc = []
dmae = []
drmapp = []
erreula = []
gx2 = []
h264 = []
lzma920 = []
mic = []
nfc = []
nio_prof = []
nlibnss = []
nlibnss2 = []
nn_ac = []
nn_acp = []
nn_act = []
nn_aoc = []
nn_boss = []
nn_ccr = []
nn_cmpt = []
nn_dlp = []
nn_ec = []
nn_fp = []
nn_hai = []
nn_hpad = []
nn_idbe = []
nn_ndm = []
nn_nets2 = []
nn_nfp = []
nn_nim = []
nn_olv = []
nn_pdm = []
nn_save = []
nn_sl = []
nn_spm = []
nn_temp = []
nn_uds = []
nn_vctl = []
nsysccr = []
nsyshid = []
nsyskbd = []
nsysnet = []
nsysuhs = []
nsysuvd = []
ntag = []
padscore = []
proc_ui = []
sndcore2 = []
snduser2 = []
swkbd = []
sysapp = []
tcl = []
tve = []
uac = []
uac_rpl = []
usb_mic = []
uvc = []
uvd = []
vpad = []
vpadbase = []

[dependencies]
bitfields = "1.0.2"
bitflags = "2.10.0"
num_enum = { version = "0.7.5", default-features = false }
# bon = { version = "3.8.2", default-features = false }
